# SecureFS

./: .gitignore  CMakeLists.txt  Design.md  Readme.md  SFSInterface.hpp  object.hpp
include/: SAH.hpp  SFS.hpp  authorizationHandler.hpp  context.hpp  credentialStore.hpp  object.hpp  secureFileSystem.hpp  session.hpp  user.hpp  userAccessHandler.hpp
include/Commands/: command.hpp  login.hpp
src/: SAH.cpp  SFS.cpp  authorizationHandler.cpp  credentialStore.cpp  main.cpp  secureFileSystem.cpp  userAccessHandler.cpp
src/commands/: login.cpp
